# wayne

./: Makefile  README.md  flake.nix  main.c  meson.build
protocols/: meson.build
src/: Compositor.cpp  Compositor.h  Global.h  Keyboard.cpp  Keyboard.h  Output.cpp  Output.h  Pointer.cpp  Pointer.h  Seat.cpp  Seat.h  Surface.cpp  Surface.h  Toplevel.cpp  Toplevel.h  input.c  input.h  layer.c  layer.h  main.c  main.cpp  output.c  output.h  server.h  util.c  util.h  xdg.c  xdg.h
